k8s/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-web
  namespace: ecommerce
  labels:
    app: ecommerce-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-web
  template:
    metadata:
      labels:
        app: ecommerce-web
    spec:
      containers:
        - name: web
          image: ecommerce-web:k2-local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 5
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 15
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
